add ZError struct for error
