# src/app/user/auth/auth_api.go
@@ -18,21 +18,10 @@ func NewAPI(uc *AuthUseCase) *API {
 }
 
 func (h *API) SetupRoutes(r *gin.RouterGroup) {
-	r.GET(core.UserAuthHealthCheck, h.healthCheck)
 	r.POST(core.UserAuthSignUpEmail, h.signupEmail)
 	r.POST(core.UserAuthConfirmEmail, h.confirmEmail)
 	r.POST(core.UserAuthLoginEmail, h.loginEmail)
 	r.POST(core.UserAuthRefreshToken, h.refreshToken)
-}
-
-// @Summary Проверка работоспособности сервиса
-// @Tags Auth
-// @Accept json
-// @Produce json
-// @Success 200
-// @Router /user/auth/health [get]
-func (h *API) healthCheck(c *gin.Context) {
-
 }
 
 // @Summary Регистрация пользователя
@@ -41,6 +30,8 @@ func (h *API) healthCheck(c *gin.Context) {
 // @Produce json
 // @Param request body share.QEmailSignup true "Данные регистрации"
 // @Success 200 {object} share.ZEmailSignup
+// @Failure 400 {object} core.ZError
+// @Failure 500 {object} core.ZError
 // @Router /user/auth/signup/email [post]
 func (h *API) signupEmail(c *gin.Context) {
 	var req share.QEmailSignup
@@ -51,8 +42,15 @@ func (h *API) signupEmail(c *gin.Context) {
 	}
 	res, err := h.uc.SignupEmail(c.Request.Context(), &req)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		switch err.Code {
+		case 400:
+			c.JSON(http.StatusBadRequest, err)
+			return
+		case 500:
+			c.JSON(http.StatusInternalServerError, err)
+			return
+		}
+
 	}
 
 	c.JSON(http.StatusOK, res)
@@ -64,6 +62,9 @@ func (h *API) signupEmail(c *gin.Context) {
 // @Produce json
 // @Param request body share.QConfirmEmail true "Данные подтверждения"
 // @Success 200 {object} share.ZAccount
+// @Failure 400 {object} core.ZError
+// @Failure 404 {object} core.ZError
+// @Failure 500 {object} core.ZError
 // @Router /user/auth/confirm/email [post]
 func (h *API) confirmEmail(c *gin.Context) {
 	var req share.QConfirmEmail
@@ -74,8 +75,17 @@ func (h *API) confirmEmail(c *gin.Context) {
 	}
 	res, err := h.uc.ConfirmEmail(c.Request.Context(), &req)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		switch err.Code {
+		case 400:
+			c.JSON(http.StatusBadRequest, err)
+			return
+		case 404:
+			c.JSON(http.StatusNotFound, err)
+			return
+		case 500:
+			c.JSON(http.StatusInternalServerError, err)
+			return
+		}
 	}
 
 	c.JSON(http.StatusOK, res)
@@ -87,6 +97,9 @@ func (h *API) confirmEmail(c *gin.Context) {
 // @Produce json
 // @Param request body share.QLoginEmail true "Данные аккаунта"
 // @Success 200 {object} share.ZToken
+// @Failure 400 {object} core.ZError
+// @Failure 404 {object} core.ZError
+// @Failure 500 {object} core.ZError
 // @Router /user/auth/login/email [post]
 func (h *API) loginEmail(c *gin.Context) {
 	var req share.QLoginEmail
@@ -97,8 +110,17 @@ func (h *API) loginEmail(c *gin.Context) {
 	}
 	res, err := h.uc.LoginEmail(c.Request.Context(), &req, c.GetHeader("User-Agent"), c.ClientIP())
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		switch err.Code {
+		case 400:
+			c.JSON(http.StatusBadRequest, err)
+			return
+		case 404:
+			c.JSON(http.StatusNotFound, err)
+			return
+		case 500:
+			c.JSON(http.StatusInternalServerError, err)
+			return
+		}
 	}
 
 	c.JSON(http.StatusOK, res)
@@ -110,6 +132,9 @@ func (h *API) loginEmail(c *gin.Context) {
 // @Produce json
 // @Param request body share.QRefreshToken true "Токен"
 // @Success 200 {object} share.ZToken
+// @Failure 400 {object} core.ZError
+// @Failure 404 {object} core.ZError
+// @Failure 500 {object} core.ZError
 // @Router /user/auth/refresh/token [post]
 func (h *API) refreshToken(c *gin.Context) {
 	var req share.QRefreshToken
@@ -120,8 +145,17 @@ func (h *API) refreshToken(c *gin.Context) {
 	}
 	res, err := h.uc.RefreshToken(c.Request.Context(), &req, c.GetHeader("User-Agent"), c.ClientIP())
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
+		switch err.Code {
+		case 400:
+			c.JSON(http.StatusBadRequest, err)
+			return
+		case 404:
+			c.JSON(http.StatusNotFound, err)
+			return
+		case 500:
+			c.JSON(http.StatusInternalServerError, err)
+			return
+		}
 	}
 
 	c.JSON(http.StatusOK, res)
